# GexGfxRip-PC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  basicdefs.h  binary_parse.c  binary_parse.h  build-win32.bat  build-win64.bat  filescanning.c  filescanning.h  gfx.c  gfx.h  main.c  meson.build  write_png.c  write_png.h
essentials/: Stack.c  Stack.h
src/: main.c
src/app/: main.c
src/core/essentials/: paged_map.c  vector.c  vector.h
src/core/filescanning/: filescanning.c  filescanning.h  obj_gfx_and_bg.c  prv_filescanning.h  tiles.c  tiles.h
src/core/graphics/: gfx.c  gfx.h  write_png.c
src/core/helpers/: basicdefs.h  binary_parse.h
src/essentials/: Stack.c  Vector.c  Vector.h  binary_bool_array.c  binary_bool_array.h  bitflag_array.c  bitflag_array.h  paged_map.h  ptr_map.c  ptr_map.h  stack.c  stack.h  vector.c  vector.h
src/filescanning/: filescanning.c  filescanning.h  filescanning_obj_gfx.c  filescanning_obj_gfx.h  filescanning_obj_gfx_and_bg.c  filescanning_obj_gfx_and_bg.h  filescanning_tiles.c  filescanning_tiles.h  fseeking_helper.c  fseeking_helper.h  obj_gfx_and_bg.c  obj_gfx_and_bg.h  prv_filescanning.h  tiles.c  tiles.h
src/graphics/: gfx.c  gfx.h  write_png.c  write_png.h
src/helpers/: basicdefs.h  error_handler.h
tests/: combine_graphic_with_bmps_test.h  fscan_draw_gfx_using_gfx_info_test.h  main.c
